large 클래스 추가

--- a/index.css
+++ b/index.css
@@ -3,10 +3,18 @@
   height: 30px;
   border: 1px solid black;
   cursor: pointer;
+  transition: transform 1s;
+}
+
+.box.large {
+  transform: scale(50);
 }
 
 .modal {
   display: none;
+  position: fixed;
+  top: 10px;
+  left: 10px;
 }
 
 .modal.show {
